src/objects/Unverfied_User_Email_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Using for</description>
    <fields>
        <fullName>Community_Profiles_Second__c</fullName>
        <label>Community Profiles Second</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Profiles__c</fullName>
        <label>Community Profiles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PasswordWithToken__c</fullName>
        <label>PasswordWithToken</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_EndPointName__c</fullName>
        <label>Salesforce EndPointName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_TokenEndPoint__c</fullName>
        <label>Salesforce TokenEndPoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox_ClientID__c</fullName>
        <label>Sandbox ClientID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox_Client_Secrate__c</fullName>
        <label>Sandbox Client Secrate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox_Name__c</fullName>
        <label>Sandbox Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Query__c</fullName>
        <label>User Query</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Unverfied User Email Settings</label>
</CustomObject>